--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Triple J Glass
-description: > # this means to ignore newlines until "baseurl:"
+description: >
  Lorem ipsum dolor sit amet consectuar di omot ti laen.
 
 # Build settings
